--- a/style.css
+++ b/style.css
@@ -3,57 +3,81 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-/* Wrapper */
+/* Hiding spinners from input type number */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Main Wrapper */
 .wrapper {
-  border: 1px solid black;
+  background-color: lightskyblue;
+  margin: 0 auto;
+  width: 50%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 /* All 6 main block */
 .block {
-  border: 1px solid black;
-  width: 100%;
+  text-align: center;
 }
 /* Introduction */
-.introduction {
-  text-align: center;
-}
 .introduction span {
   font-size: 2rem;
-  text-align: center;
   margin: 10px;
   display: block;
 }
-/* Secret number */
+/* Secret Number */
 .secret_number {
-  font-size: 10rem;
-  text-align: center;
-}
-/* Input */
-.input {
-  text-align: center;
-}
-.input input {
-  width: 100px;
-  height: 100px;
   font-size: 2rem;
-}
-/* Button */
-.check {
   text-align: center;
 }
-/* Lives */
-.lives {
-  background-color: lightcoral;
-  width: 100%;
-  height: 30px;
+/* Display Messages */
+.message {
+  font-size: 1.5rem;
 }
-/* HighScore Bar */
+/* Checking Number */
+.check {
+  width: 50%;
+}
+.check input {
+  margin-bottom: 5px;
+  height: 100px;
+  width: 100px;
+  font-size: 3rem;
+}
+.check button {
+  width: 100px;
+  height: 50px;
+}
+/* Lives Bar*/
+.lives {
+  background-color: lightpink;
+  height: 30px;
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  padding: 3px;
+}
+/* Highscore Bar */
 .highscore {
   background-color: lightseagreen;
-  width: 100%;
   height: 30px;
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  padding: 3px;
+  margin-bottom: 30px;
+}
+/* The squares from lives and highscore bars */
+.square {
+  background-color: lightcoral;
+  margin: 1px;
+  width: 20px;
 }
