make restart functionality

--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Bungee, Georgia, "Times New Roman", Times, serif;
+}
+body {
+  background-color: #911f27;
 }
 /* Hiding spinners from input type number */
 input[type="number"]::-webkit-inner-spin-button,
@@ -14,14 +17,13 @@ input[type="number"]::-webkit-outer-spin-button {
 
 /* Main Wrapper */
 .wrapper {
-  background-color: lightskyblue;
+  background-color: #630a10;
   margin: 0 auto;
   width: 50%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
+  border: 3px solid #4f0e0e;
 }
 /* All 6 main block */
 .block {
@@ -30,7 +32,6 @@ input[type="number"]::-webkit-outer-spin-button {
 /* Introduction */
 .introduction span {
   font-size: 2rem;
-  margin: 10px;
   display: block;
 }
 /* Secret Number */
@@ -56,28 +57,23 @@ input[type="number"]::-webkit-outer-spin-button {
   width: 100px;
   height: 50px;
 }
+/* Restart Game*/
+.restart_button {
+  width: 100%;
+  height: 50px;
+  margin-top: 5px;
+  padding: 3px;
+}
 /* Lives Bar*/
 .lives {
   background-color: lightpink;
   height: 30px;
-  width: 50%;
-  display: flex;
-  justify-content: space-around;
-  padding: 3px;
+  padding: 5px;
 }
 /* Highscore Bar */
 .highscore {
   background-color: lightseagreen;
   height: 30px;
-  width: 50%;
-  display: flex;
-  justify-content: space-around;
-  padding: 3px;
+  padding: 5px;
   margin-bottom: 30px;
-}
-/* The squares from lives and highscore bars */
-.square {
-  background-color: lightcoral;
-  margin: 1px;
-  width: 20px;
 }
